# portrait-demo

./: .env  .gitignore  LICENSE  README.md  compose.prod.yml  compose.yml  docker-compose.prod.yml  docker-compose.yml
back/: .dockerignore  Dockerfile  api.py  app.py  pyproject.toml  requirements.in  requirements.txt  ruff.toml
back/models/: __init__.py  unet_resnet.py  utils.py
back/models/decoders/: __init__.py  unet.py
back/models/encoders/: __init__.py  resnet.py
back/models/layers/: __init__.py  common.py  upsample.py
back/resource/: unet_resnext50.pth.txt
backend/: Dockerfile  api.py  requirements.txt
backend/models/: __init__.py
backend/models/classification/: resnext.py
backend/models/decoders/: __init__.py
backend/models/encoders/: __init__.py
backend/resource/: unet_resnext50.pth.txt
front/: .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  index.html  index.js  nginx.conf  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.js  vite.config.ts  vue.config.js
front/public/: index.html
front/src/: App.svelte  App.vue  app.css  app.html  main.css  main.js
front/src/assets/fonts/: inter.css
front/src/components/: IconTailSpin.vue  Segmentator.vue  TheFooter.vue  TheHeader.vue
front/src/composables/: useWebAPI.js
front/src/lib/: ErrorCard.svelte  Header.svelte  IconTailSpin.svelte  MaskCard.svelte  PhotoCard.svelte  RequestForm.svelte  Segmentator.svelte  store.svelte.ts
front/src/lib/components/: ErrorCard.svelte  Footer.svelte  Header.svelte  IconTailSpin.svelte  MaskCard.svelte  PhotoCard.svelte  RequestForm.svelte  Segmentator.svelte
front/src/lib/components/ui/: Card.svelte  (+1 more)
front/src/lib/ui/: Card.svelte  Container.svelte
front/src/routes/: +layout.svelte  +page.svelte
frontend/: index.html  index.js
frontend/assets/css/: font-awesome.min.css
frontend/assets/js/: highlight.pack.min.js  vue.js
nginx/: http.conf  https.conf
nginx/snippets/: ssl-params.conf
