[project]
name = "portrait-back"
version = "0.4.0"
description = "Portrait Segmentation Demo"
authors = [{ name = "Evgeny Nizhibitsky", email = "nizhib@github.com" }]
dependencies = [
  "fastapi~=0.115.11",
  "httpx~=0.28.1",
  "imageio~=2.37.0",
  "numpy~=2.2.3",
  "torch~=2.6.0",
  "torchvision~=0.21.0",
  "ujson~=5.10.0",
  "uvicorn[standard]~=0.34.0",
  "pydantic~=2.10.6",
]
requires-python = ">=3.12"
license = { text = "MIT License" }

[project.urls]
Homepage = "https://portrait.nizhib.ai"
Repository = "https://github.com/nizhib/portrait-demo"

[dependency-groups]
dev = ["ruff>=0.10.0"]

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
